# oxidemux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  hk.pkl  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
.hk-hooks/: pre-commit
crates/oxidemux/: Cargo.toml
crates/oxidemux/src/: main.rs
crates/oxidemux/tests/: bootstrap.rs
crates/oxmux/: Cargo.toml
crates/oxmux/src/: configuration.rs  errors.rs  local_client_auth.rs  local_proxy_runtime.rs  management.rs  minimal_proxy.rs  model_registry.rs  oxmux.rs  protocol.rs  provider.rs  reasoning.rs  routing.rs  streaming.rs  usage.rs
crates/oxmux/src/configuration/: file.rs  raw.rs  validation.rs
crates/oxmux/tests/: dependency_boundary.rs  direct_use.rs  file_configuration.rs  local_proxy_runtime.rs  minimal_proxy_engine.rs  model_registry.rs  protocol_translation.rs  provider_execution.rs  reasoning.rs  routing_policy.rs  streaming_response.rs
crates/oxmux/tests/fixtures/file_configuration/: parse-failure.toml  unknown-field.toml  valid.toml
docs/: architecture.md  vision.md
openspec/: config.yaml
openspec/changes/add-file-backed-configuration-loading/: proposal.md
openspec/changes/add-oxmux-model-registry-listing/: design.md  proposal.md
openspec/changes/add-oxmux-thinking-reasoning-controls/: design.md  proposal.md  tasks.md
openspec/changes/enforce-public-api-documentation/: design.md
openspec/changes/split-oxmux-core-from-oxidemux-shell/: design.md
openspec/changes/streaming-robustness-controls/: tasks.md
openspec/specs/development-workflow/: spec.md
openspec/specs/oxidemux-app-shell/: spec.md
openspec/specs/oxmux-core/: spec.md
openspec/specs/oxmux-file-configuration/: spec.md
openspec/specs/oxmux-local-client-auth/: spec.md
openspec/specs/oxmux-local-proxy-runtime/: spec.md
openspec/specs/oxmux-management-lifecycle/: spec.md
openspec/specs/oxmux-minimal-proxy-engine/: spec.md
openspec/specs/oxmux-model-registry/: spec.md
openspec/specs/oxmux-protocol-translation/: spec.md
openspec/specs/oxmux-provider-execution/: spec.md
openspec/specs/oxmux-reasoning-controls/: spec.md
scripts/: quiet-on-success.sh
scripts/ci/: validate-openspec-pr.sh
(+99 files in other folders)
