[workspace]
members = ["crates/oxmux", "crates/oxidemux"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weshipwork/oxidemux"
homepage = "https://github.com/weshipwork/oxidemux"
authors = ["OxideMux contributors"]
