[package]
name = "oxmux"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
description = "Headless reusable core boundary for OxideMux."

[lib]
path = "src/oxmux.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
