[package]
name = "oxmux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Headless reusable core boundary for OxideMux."
readme = "../../README.md"
documentation = "https://docs.rs/oxmux"
keywords = ["ai", "proxy", "routing", "subscription"]
categories = ["development-tools"]

[lib]
path = "src/oxmux.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
